--- a/bifangfront/package.json
+++ b/bifangfront/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.1",
     "core-js": "^3.8.2",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "style-resources-loader": "^1.4.1",
     "vue": "^2.6.12",
