--- a/bifangfront/.env.development
+++ b/bifangfront/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
 VUE_APP_API_BASE_URL=/mock
-VUE_APP_API_REAL_URL=/restapi
+VUE_APP_API_REAL_URL=http://127.0.0.1:8000
