--- a/bifangfront/package.json
+++ b/bifangfront/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.1",
     "core-js": "^3.8.2",
+    "echarts": "^4.9.0",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
