--- a/bifangback/requirements.txt
+++ b/bifangback/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.3.1
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
@@ -13,6 +14,9 @@ django-simple-history==2.12.0
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
 drf-yasg==1.20.0
+gevent==21.1.2
+greenlet==1.0.0
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.12.2
 httpx==0.16.1
@@ -21,8 +25,10 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-mysqlclient @ file:///D:/mariadb/mysqlclient-1.4.6-cp38-cp38-win_amd64.whl
+mysqlclient @ file:///D:/mariadb/mysqlclient-1.4.6-cp38-cp38-win_amd64.whl; platform_system == "Windows"
+mysqlclient==1.4.6; platform_system == "Linux"
 packaging==20.8
+pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.7
 python-gitlab==2.5.0
@@ -40,3 +46,5 @@ terminaltables==3.1.0
 uritemplate==3.0.1
 urllib3==1.26.2
 uvicorn==0.13.3
+zope.event==4.5.0
+zope.interface==5.3.0
